// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render correctly when covered 1`] = `
.emotion-0 {
  color: var(--echoes-color-text-subtle);
  background-color: var(--line-background);
  outline: none;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.e44d5qo9:hover .emotion-0 {
  background-color: rgb(239,242,249);
}

<tr>
  <td
    class="sw-pl-1/2 emotion-0 emotion-1"
    data-line-number="16"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 6 20"
      width="6"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        OK
      </title>
      <rect
        fill="var(--echoes-margin-indicator-colors-background-covered)"
        height="20"
        width="6"
      />
    </svg>
  </td>
</tr>
`;

exports[`should render correctly when no data 1`] = `
.emotion-0 {
  color: var(--echoes-color-text-subtle);
  background-color: var(--line-background);
  outline: none;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.e44d5qo9:hover .emotion-0 {
  background-color: rgb(239,242,249);
}

<tr>
  <td
    class="emotion-0 emotion-1"
    data-line-number="16"
  />
</tr>
`;

exports[`should render correctly when partially covered with 5/10 conditions 1`] = `
.emotion-0 {
  color: var(--echoes-color-text-subtle);
  background-color: var(--line-background);
  outline: none;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.e44d5qo9:hover .emotion-0 {
  background-color: rgb(239,242,249);
}

<tr>
  <td
    class="sw-pl-1/2 emotion-0 emotion-1"
    data-line-number="16"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 6 20"
      width="6"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        OK
      </title>
      <path
        d="M0 15L6 20H0V15ZM0 5L6 10V15L0 10V5ZM6 5L0 0H6V5Z"
        fill="var(--echoes-margin-indicator-colors-background-partially-covered)"
      />
    </svg>
  </td>
</tr>
`;

exports[`should render correctly when partially covered without conditions 1`] = `
.emotion-0 {
  color: var(--echoes-color-text-subtle);
  background-color: var(--line-background);
  outline: none;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.e44d5qo9:hover .emotion-0 {
  background-color: rgb(239,242,249);
}

<tr>
  <td
    class="sw-pl-1/2 emotion-0 emotion-1"
    data-line-number="16"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 6 20"
      width="6"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        OK
      </title>
      <path
        d="M0 15L6 20H0V15ZM0 5L6 10V15L0 10V5ZM6 5L0 0H6V5Z"
        fill="var(--echoes-margin-indicator-colors-background-partially-covered)"
      />
    </svg>
  </td>
</tr>
`;

exports[`should render correctly when uncovered 1`] = `
.emotion-0 {
  color: var(--echoes-color-text-subtle);
  background-color: var(--line-background);
  outline: none;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.e44d5qo9:hover .emotion-0 {
  background-color: rgb(239,242,249);
}

<tr>
  <td
    class="sw-pl-1/2 emotion-0 emotion-1"
    data-line-number="16"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 6 20"
      width="6"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        OK
      </title>
      <rect
        fill="var(--echoes-margin-indicator-colors-background-uncovered)"
        height="20"
        width="2"
      />
      <rect
        fill="var(--echoes-margin-indicator-colors-background-uncovered)"
        height="20"
        width="2"
        x="4"
      />
    </svg>
  </td>
</tr>
`;
